# libsemx

./: .gitignore  LICENSE  README.md  check_ordinal_gradients.R  check_ranef.R  check_sommer.R  debug_parsing.R  debug_toeplitz.R  get_lme4_ranef.R  get_lme4_values.R  get_lme4_values_loglik.R  hessian_debug.txt
Rpkg/semx/: DESCRIPTION  NAMESPACE
Rpkg/semx/R/: crossed.R  gs.R  gxe.R  plot_gxe.R  plot_path.R  plot_survival.R  ranef.R  semx.R  survival.R
Rpkg/semx/examples/: shrinkage_example.R
Rpkg/semx/man/: plot_reaction_norms.Rd  print.semx_crossed_fit.Rd  semx_covariance_weights.Rd  semx_crossed.Rd  semx_cv_genomic_prediction.Rd  semx_diagnostics.Rd  semx_extract_heritability.Rd  semx_fit.Rd  semx_gs.Rd  semx_gxe.Rd  semx_model.Rd  semx_modification_indices.Rd  semx_plot_path.Rd  semx_plot_survival.Rd  semx_predict_cif.Rd  semx_predict_survival.Rd  semx_ranef.Rd  semx_standardized_solution.Rd  semx_variance_components.Rd  summary.semx_crossed_fit.Rd
Rpkg/semx/src/: Makevars  RcppExports.cpp  r_bindings.cpp
Rpkg/semx/tests/: testthat.R
Rpkg/semx/tests/testthat/: test-bindings.R  test-genomic.R  (+11 more)
cpp/: CMakeLists.txt
cpp/include/libsemx/: average_information_optimizer.hpp  binomial_outcome.hpp  covariance_structure.hpp  exponential_outcome.hpp  fixed_covariance.hpp  fixed_outcome.hpp  gaussian_outcome.hpp  genomic_kernel.hpp  kronecker_covariance.hpp  likelihood_driver.hpp  loglogistic_outcome.hpp  lognormal_outcome.hpp  mixed_outcome.hpp  model_graph.hpp  model_ir.hpp  model_objective.hpp  model_types.hpp  mom_solver.hpp  multi_kernel_covariance.hpp  multivariate_spectral_likelihood_evaluator.hpp  negative_binomial_outcome.hpp  optimizer.hpp  ordinal_outcome.hpp  outcome_family.hpp  outcome_family_factory.hpp  parameter.hpp  parameter_catalog.hpp  parameter_transform.hpp  poisson_outcome.hpp  post_estimation.hpp  scaled_fixed_covariance.hpp  spectral_likelihood_evaluator.hpp  weibull_outcome.hpp
cpp/src/bindings/: python_bindings.cpp
cpp/src/libsemx/: average_information_optimizer.cpp  binomial_outcome.cpp  covariance_structure.cpp  exponential_outcome.cpp  fixed_covariance.cpp  fixed_outcome.cpp  gaussian_outcome.cpp  genomic_kernel.cpp  kronecker_covariance.cpp  likelihood_driver.cpp  loglogistic_outcome.cpp  lognormal_outcome.cpp  mixed_outcome.cpp  model_graph.cpp  model_ir.cpp  model_objective.cpp  mom_solver.cpp  multi_kernel_covariance.cpp  multivariate_spectral_likelihood_evaluator.cpp  negative_binomial_outcome.cpp  optimizer.cpp  ordinal_outcome.cpp  outcome_family_factory.cpp  parameter.cpp  parameter_catalog.cpp  parameter_transform.cpp  poisson_outcome.cpp  post_estimation.cpp  scaled_fixed_covariance.cpp  spectral_likelihood_evaluator.cpp  weibull_outcome.cpp
cpp/tests/: analytic_gradient_tests.cpp  average_information_optimizer_tests.cpp  binomial_outcome_tests.cpp  competing_risks_tests.cpp  covariance_optimization_tests.cpp  covariance_structure_tests.cpp  dispersion_gradient_tests.cpp  expanded_covariance_tests.cpp  exponential_outcome_tests.cpp  fiml_tests.cpp  fit_statistics_tests.cpp  fixed_covariance_fit_tests.cpp  gaussian_outcome_tests.cpp  grm_tests.cpp  kronecker_covariance_tests.cpp  kronecker_laplace_gradient_tests.cpp  laplace_tests.cpp  lavaan_comparison_tests.cpp  likelihood_driver_tests.cpp  lme4_alignment_tests.cpp  loglogistic_outcome_tests.cpp  lognormal_outcome_tests.cpp  mixed_model_gradient_tests.cpp  mixed_model_tests.cpp  model_graph_tests.cpp  model_ir_tests.cpp  mom_solver_tests.cpp  multi_group_tests.cpp  multi_kernel_tests.cpp  multivariate_spectral_likelihood_tests.cpp  negative_binomial_laplace_gradient_tests.cpp  negative_binomial_outcome_tests.cpp  optimizer_tests.cpp  ordinal_laplace_gradient_tests.cpp  ordinal_outcome_tests.cpp  outcome_family_factory_tests.cpp  parameter_catalog_tests.cpp  poisson_outcome_tests.cpp  post_estimation_tests.cpp  reml_plumbing_tests.cpp  (+10 more)
data/: README.md  bfi_complete.csv  mdp_traits.csv  sommer_K.csv  sommer_gxe.csv
docs/: TODO.md  sem_glmm_soundness.md
docs/examples/: formula_frontend.md  libsemx_demonstration.html  libsemx_demonstration.ipynb  libsemx_starter.Rmd  libsemx_starter.html  mdp_analysis.Rmd  mdp_analysis.html  mdp_analysis.ipynb  model_builder_syntax.md  survival_cif.md
docs/manuscript/: libsemx_manuscript.Rmd  libsemx_manuscript.html  libsemx_manuscript.tex  references.bib
docs/plans/: 2025-12-01-gaussian-family.md  2025-12-01-ir-contract.md  2025-12-01-modelgraph-parameter.md  2025-12-01-optimizer-interface.md  2025-12-15-frontend-integration.md  validation_plan_v2.md
python/: README.md  pyproject.toml
python/examples/: crossed_effects_example.py  shrinkage_example.py
python/semx/: __init__.py  crossed.py  genomic.py  gxe.py  model.py  plotting.py  survival.py
python/semx/tests/: __init__.py  test_covariance_structure.py  test_diagnostics.py  test_fit.py  test_fit_indices.py  test_frontend_integration.py  test_gaussian_outcome.py  test_genomic.py  test_genomic_utils.py  test_grm_crash_repro.py  test_gxe.py  test_gxe_kronecker.py  test_laplace_gradients.py  test_likelihood_driver.py  test_metadata.py  test_mixed_model_syntax.py  test_model_api.py  test_model_graph.py  test_model_ir.py  test_multi_group.py  test_multi_group_api.py  test_optimizer.py  test_optimizer_options.py  test_plotting.py  test_sem_estimation.py  test_simplex.py  test_summary_plot.py  test_variance_components.py
validation/: comparison.Rmd  comparison.html  comprehensive_validation.R  comprehensive_validation_v2.R  covariance_structures_validation.R  debug_comparison_append.R  generate_baselines.R  generate_lavaan_baselines.R  generate_sommer_baselines.R  generate_survival_baselines.R  sim_cs_compare_semx_nlme.R  simulation_harness.R  validate_covariance_structures.R  validate_genomic_selection.R  validate_glm_families.R  validate_growth_curve.R  validate_mixed_cfa.R  validate_mixed_outcomes.R  validate_mixed_sem.R  validate_ordinal.R  validate_ordinal_cfa.R  validate_reml.R
validation/dev_scripts/: check_gradients.R  debug_comparison.R  debug_ranef_parsing.R  test_parsing.R
